tests/NormalTests/paczka1/fuzzy1/16933716.err
Error in line 1: uKA A370 20,7
Error in line 9: Xe6njwHmBk A370 19,4
Error in line 6: A373 S525 47,3
Error in line 22: uKA A373 75,0
Error in line 25: uKA S525 27,2
Error in line 27: 8CX A373 6,9
